appId: com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true

#Verify products are soretd in descending alphbetical order
- waitForAnimationToEnd
#Click on sorting button
- tapOn:
    id: sortIV
#click on sorting in descending order of name
- tapOn:
    id: nameDesCL
- waitForAnimationToEnd
- assertVisible:
    id: titleTV

#Verify are sorted in ascending order of price
- waitForAnimationToEnd
- tapOn:
    id: sortIV
- tapOn:
    id: menuPriceAscIV
- waitForAnimationToEnd

- assertVisible:
    id: priceTV
