appId: com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true

 #Verify that user can add products to cart from catalog
- waitForAnimationToEnd:
    timeout: 5000
#add product to cart    
- tapOn:
    id: productIV
- tapOn:
    id: cartBt
- tapOn:
    id: cartIV
- waitForAnimationToEnd
- tapOn:
    id: cartBt

 #login to proceed to checkout
- tapOn:
    id: username1TV

- tapOn:
    id: buttonLL
- waitForAnimationToEnd


#Verify user can proceed for checkout after adding product to cart
#Enter details for checkout
- tapOn:
    id: fullNameRL
- inputText: Test
- tapOn:
    id: address1RL
- inputText: Test1
- tapOn:
    id: address2RL

- inputText: Test1
- hideKeyboard
- waitForAnimationToEnd
- tapOn:
    id: cityRL
- inputText: test
- tapOn:
    id: stateRL

- inputText: test
- hideKeyboard
- tapOn:
    id: zipRL
- inputText: "1234"
- tapOn:
    id: countryRL

- inputText: Australia
- hideKeyboard
- tapOn:
    id: paymentBtn
- assertVisible:
    id: paymentBtn



#Final checkout process- tapOn: Rebecca Winter

- tapOn:
    id: nameRL

- inputText: Test
- tapOn:
    id: cardNumberET
- inputText: "123456789"
- hideKeyboard
- tapOn:
    id: expirationDateRL

- inputText: 04/25
- tapOn:
    id: securityCodeRL

- inputText: "123"
- hideKeyboard
- tapOn:
    id: paymentBtn
- waitForAnimationToEnd
- tapOn:
    id: paymentBtn
- assertNotVisible:
    id: completeTV





























 
