appId: com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- tapOn:
    id: menuIV
- tapOn:
    id: itemTV
    index: 4
   
#Drawing Rectangle
#Top line
- waitForAnimationToEnd

- swipe:
    start: 100,500
    end: 400,500
    duration: 500

# Right line
- waitForAnimationToEnd

- swipe:
    start: 400,500
    end: 400,800
    duration: 500

# Bottom line
- waitForAnimationToEnd
- swipe:
    start: 400,800
    end: 100,800
    duration: 500

# Left line
- waitForAnimationToEnd
- swipe:
    start: 100,800
    end: 100,500
    duration: 500

 






