appId:  com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true

 #Verify login with valid username bod@example.com and password 10203040
- tapOn:
    id: menuIV
- tapOn:
    id: itemTV
    index: 10


#click on usernamefield
- tapOn:
    id: nameRL
- inputText: bod@example.com
#click on password field
- tapOn:
    id: passwordRL
- inputText: "10203040"

#hide keyboard
- hideKeyboard

#tab login
- tapOn:
    id: buttonLL
- tapOn:
    id: menuIV
- assertVisible:
    id: itemTV
    index: 10

#verify that user cannot login with empty password
- tapOn:
    id: itemTV
    index: 10
- tapOn:
    id: button1
- waitForAnimationToEnd
#enter username
- tapOn:
    id: nameRL
- inputText: bod@example.com

- hideKeyboard
- waitForAnimationToEnd
#tap on login button wihout providing password
- tapOn:
    id: buttonLL
- assertVisible:
    id: passwordErrorTV










   



    







